k8s/daemonset-deploy.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mern-app
  namespace: dev
  labels:
    app: mern
spec:
  selector:
    matchLabels:
      app: mern
  template:
    metadata:
      labels:
        app: mern
    spec:
      containers:
      - name: mern-container
        image: sunny002/mern-app
        ports:
        - containerPort: 7080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 7080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 7080
          initialDelaySeconds: 10
          periodSeconds: 5
      tolerations:
      - key: "prod"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
