k8s/mongodbService.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  namespace: dev
  labels:
    app: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
