k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-service
  namespace: dev
  labels:
    app: mern
spec:
  type: NodePort
  selector:
    app: mern
  ports:
  - protocol: TCP
    port: 7080
    targetPort: 7080
    nodePort: 30080 # Exposes the app on this port of the host
