k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "wanderlust.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mern-service
            port:
              number: 7080
